--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>hello</title>
     </head>
     <body>
-        <h1>welocmw ifn</h1>
+        <h1>welocmw if</h1>
         <h2>other collab</h2>
         hello, world
     </body>
